@@ -1,6 +1,4 @@
-############################################################################
-# Fit unit tests
-############################################################################
+include(GoogleTest)
 
 set(test UnitTestFit)
 
@@ -12,5 +10,4 @@ file(GLOB include_files "*.h")
 add_executable(${test} ${source_files} ${include_files})
 target_link_libraries(${test} ${BornAgainFit_LIBRARY} gtest)
 
-# add execution of TestCore just after compilation
-add_custom_target(${test}_run ALL DEPENDS ${test} COMMAND ${test})
+gtest_discover_tests(${test} TEST_PREFIX Fit:Unit:)
