@@ -1,6 +1,4 @@
-############################################################################
-# GUI unit tests
-############################################################################
+include(GoogleTest)
 
 set(test UnitTestGUI)
 
@@ -17,5 +15,4 @@ add_executable(${test} ${source_files} ${include_files})
 target_link_libraries(${test} ${BornAgainGUI_LIBRARY} gtest)
 target_link_libraries(${test} Qt5::Core Qt5::Test)
 
-# add execution of TestCore just after compilation
-add_custom_target(${test}_run ALL DEPENDS ${test} COMMAND ${test})
+gtest_discover_tests(${test} TEST_PREFIX GUI:Unit:)
